fix(sonar): Wave 4A — production code quality (S1192/S6204/S6201/S1602/S5411/S7467/S2629/S2139/S112/S1068)
S1192: Extract string constants in MemoryController (usedMB/maxMB/usagePercent/committedMB),
  LocalLRUCache (cache_type/local), MetricsConfig (application/environment),
  LoggingConfig (ruleId MDC key)
S6204: Stream.toList() in MemoryController, AdminController,
  InMemoryRuleStorageAdapter, S3RuleStorage (+ remove unused Collectors imports)
S6201: instanceof pattern matching in RuleDataValidator (String, Number),
  LogSanitizer (String), ThreadPoolConfig (2×)
S1602: Remove useless lambda curly braces in CircuitBreakerConfig (4×), RuleExecutor (1×)
S5411: Boolean.TRUE.equals(response.isTruncated()) in S3RuleStorage (3×)
S7467: Unnamed catch vars (_) in MemoryController, RedisRuleCache (2×),
  LogSanitizer, S3RuleStorage
S2629: @SuppressWarnings on GlobalExceptionHandler, RuleExecutionController,
  AdminController (security-motivated LogSanitizer calls); MemoryController method
S2139: Remove log from log+rethrow in S3RuleStorage (4 catches),
  LocalFileStorage (2), AdminController (1), RuleExecutionController (1);
  NOSONAR on RequestTimeoutConfig (duration/URI context is genuinely useful)
S112: New RuleStorageException replaces RuntimeException in S3RuleStorage and
  LocalFileStorage storage operations
S1068: Delete unused CACHE_STATS_KEY in RedisRuleCache

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>